# superweb-testing

./: .gitignore  README.md  compose.yaml  config.example.yaml  plan.md  pyproject.toml  test_openhands_connection.py
.state/: wiki_queue.json
src/: __init__.py  __main__.py  cli.py  data_generator.py  log_monitor.py  openhands_client.py  pipeline.py  source_analyzer.py  test_runner.py
tests/: conftest.py
